# AIPulse

./: README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
scripts/gitflow/feature/: feature_finish.sh  feature_pull.sh
scripts/gitflow/hotfix/: hotfix_finish.sh  hotfix_start.sh
scripts/gitflow/release/: release_finish.sh  release_start.sh
tests/: test.py
